[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ulfsynth"
dynamic = ["version", "description", "dependencies", "optional-dependencies"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Toufiq Musah" },
]
keywords = [
    "mri", "ultra-low-field", "ulf", "medical-image-enhancement",
    "image-synthesis", "deep-learning", "neuroimaging",
    "nnunet", "image-translation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/toufiqmusah/ULF-Synth"
repository = "https://github.com/toufiqmusah/ULF-Synth"
documentation = "https://github.com/toufiqmusah/ULF-Synth#readme"
"Bug Tracker" = "https://github.com/toufiqmusah/ULF-Synth/issues"

[project.scripts]
ulfsynth = "ulfsynth.cli:main"

[tool.setuptools.packages.find]
include = ["ulfsynth*"]
